fix promo overflow

--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,6 +1,7 @@
 .promo {
   max-width: 1360px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .promo-brands {
